--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 @layer base {
-    html {
-        /* font-family: 'Rubik', sans-serif; */
+    body {
+        @apply bg-[#F4F8FC];
     }
   }
